Resolves: tdf#117068 wrong parent for exception dialog

Change-Id: I51e6b32593f2e67585c6c45b0b1daefcf4860e20